--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <span style="color: orange;">FOOD</span>  NETWORK
         </h3>
         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
-        <p style="color: orangered;">Stay Safe Form Covid-19.</p>
+        <p style="color: orangered;">Stay Safe From Covid-19.</p>
        
     </footer>
 </body>
